--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,3 +2,21 @@
 .fa-rotate-45 {
     transform: rotate(45deg);
 }
+.roundPrimary{
+    height: 1.5rem;
+    width: 1.5rem;
+    background-color: #ABEF5F;
+    border-radius: 9999px;
+}
+.roundSecondary{
+    height: 1.5rem;
+    width: 1.5rem;
+    background-color: #1C1C1C;
+    border-radius: 9999px;
+}
+.roundExtra{
+    height: 1.5rem;
+    width: 1.5rem;
+    background-color: white;
+    border-radius: 9999px;
+}
